# dependency-blame

./: CHANGELOG.md  Cargo.toml  LICENSE  PACKAGE_SETUP.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/core/: dependency.rs  error.rs  git_analyzer.rs  mod.rs  orchestrator.rs  usage_scanner.rs
src/ecosystems/: mod.rs  registry.rs  traits.rs
src/ecosystems/go/: mod.rs  parser.rs  scanner.rs
src/ecosystems/node/: mod.rs  parser.rs  scanner.rs
src/ecosystems/python/: mod.rs  parser.rs  scanner.rs
src/ecosystems/rust/: mod.rs  parser.rs  scanner.rs
src/presentation/: json.rs  mod.rs  text.rs  tui.rs
src/utils/: fs.rs  mod.rs  patterns.rs
