[package]
name = "dependency-blame"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Analyze why dependencies exist in your project"
license = "MIT"
repository = "https://github.com/yourusername/dependency-blame"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Git operations
git2 = { version = "0.18", features = ["vendored-libgit2"] }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async/parallel operations
rayon = "1.8"

# Utilities
walkdir = "2.4"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "dependency-blame"
path = "src/main.rs"

[lib]
name = "dependency_blame"
path = "src/lib.rs"
